...
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:layout_weight="1">
        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_sounds_RV"
...
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="5dp">
        <ImageView
        android:id="@+id/category_addSound"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:background="@drawable/round_outline"
        android:backgroundTint="@color/AudientesOrange"
        android:src="@drawable/ic_baseline_add_24"

...
