<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/preset_backarrow"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/hScrollView"
            app:tint="@color/white" />

        <HorizontalScrollView
            android:id="@+id/hScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="45dp"
            android:layout_marginLeft="56dp"
            android:gravity="center"
            app:layout_constraintLeft_toRightOf="@+id/preset_backarrow"
            app:layout_constraintRight_toLeftOf="@+id/savePresetIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <EditText
                android:id="@+id/presetTitle_ET"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/audientes_font"
                android:hint="Enter preset title          "
                android:gravity="center"
                android:textColor="@color/white"
                android:textColorHint="@color/LightGrey"
                android:textSize="32dp"

                tools:layout_editor_absoluteX="56dp" />
        </HorizontalScrollView>

        <TextView
            android:id="@+id/savePresetIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:fontFamily="@font/audientes_font"
            android:gravity="center"
            android:text="SAVE"
            android:textColor="@color/AudientesOrange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/hScrollView"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/presetSoundsNew_RV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/preset_addSound"
        android:layout_height="40dp"
        android:layout_width="325dp"
        android:src="@drawable/ic_baseline_add_24"
        android:background="@drawable/round_outline"
        android:backgroundTint="@color/AudientesOrange"
        app:tint="@color/white"
        android:layout_gravity="center"/>

</LinearLayout>
