<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/presetList_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audientes_font"
        android:text="Preset List"
        android:textColor="@color/white"
        android:textSize="26dp"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:textAllCaps="true"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/presets_RV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_preset"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:srcCompat="@drawable/ic_baseline_add_24"
        android:layout_margin="10dp"
        app:backgroundTint="@color/AudientesOrange"
        app:tint="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        />


</RelativeLayout>
</LinearLayout>