<resources>
    <string name="app_name">C3-AUDIENTES</string>
    <string name="hearingtest">Hearingtest</string>
    <string name="library">Library</string>
    <string name="presets">Presets</string>
</resources>